[package]
name = "ribasome_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "uuid",
    "time",
    "chrono",
    "postgres",
    "macros",

] }
uuid = { version = "1.1.2", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
strum = { version = "0.24.1", features = ["derive"] }
bevy = { version = "0.11", default-features = true }
geo = { version = "0.26.0", features = ["serde"] }
